# Atlas_MongoEngine

./: pyproject.toml
Lib/: config.ini
Scripts/: querying.py  seed.py
