[tool.poetry]
name = "atlas-mongoengine"
version = "0.1.0"
description = ""
authors = ["Artur Mistiuk <mistiuk.artur@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "atlas_mongoengine"}]

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
